# boostGeometryDemo

./: CMakeLists.txt  defineSharedArea.h  defineSharedArea.hh  main.cpp
Spatial/: Component.h  Container.h  SpatialContainer.cpp  SpatialContainer.h  fwd.h
Spatial/impl/: Component.cpp  Container.cpp  MultimapRange.h
geometryPrimitives/: algo_boost.h  algo_box.h  box.h  point.h
geometryPrimitives/box/: fwd.h  impl.h  instantion.cpp
geometryPrimitives/fwd/: box.h  point.h
geometryPrimitives/impl/: algo_boost.hh  algo_box.hh  box.hh  instantion.cpp  point.hh
geometryPrimitives/point/: fwd.h  impl.h  instantion.cpp
geometryPrimitives/stream/: box.h  point.h
treats_testing/: treats_testing.h
